--- a/src/pages/MainPage.module.css
+++ b/src/pages/MainPage.module.css
@@ -1,16 +1,25 @@
 .Layout {
     padding: 16px;
+    min-height: 100vh;
 }
 
 .Header {
-    background-color: transparent;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    padding-top: 8px;
+    width: 100%;
+    background-color: #f5f5f5;
+    height: auto;
 }
 
 .Title {
-    margin-top: 0;
+    margin: 0;
     text-align: center;
 }
 
 .LayoutContent {
+    margin-top: 24px;
     padding: 8px;
+    overflow-y: 'auto'
 }
